<resources>
    <string name="app_name">Food for all</string>
    <string name="splash">LOGO</string>
    <string name="login">Iniciar Sesión</string>
    <string name="text_divisor">-- Or --</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="button">Button</string>
    <string name="registrarse">Registrarse</string>
    <string name="spinner">Sexo</string>
    <string name="lo_quiero">Lo quiero</string>
    <string name="nombre_producto">NOMBRE PRODUCTO</string>
    <string name="tipo_producto">TIPO PRODUCTO</string>
    <string name="fecha_vencimiento">FECHA VENCIMIENTO </string>
    <string name="fecha_vencimiento_corta">F.V. </string>
    <string name="descripcion_producto">DESCRIPCIÓN</string>
    <string name="guardar_producto">GUARDAR PRODUCTO</string>
    <string name="foto_producto">TOMAR FOTO PRODUCTO</string>
    <string name="ubicacion">Ubicación</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Perfil</string>
    <string name="title_notifications">Publicaciones</string>
    <string name="title_salir">Salir</string>
    <string name="invitar_amigos">Invitar Amigos</string>
    <string name="invitacion">¿Quieres invitar a tus amigos?</string>
    <string name="exito">Ha sido todo un éxito</string>
    <string name="usuario_invita">Nombre Usuario, tu producto</string>
    <string name="estado_producto">Estado Producto</string>
    <string name="mis_publicaciones">Mis Publicaciones</string>
</resources>