<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/registro_img"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editFotoAlimentoFormulario"
                android:layout_width="148dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/logo_alimento" />

            <Button
                android:id="@+id/btnFotoProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B3BB21"
                android:text="@string/foto_producto"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutAtributos"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNombreProducto"
                style="@style/vistaRegistro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/nombre_producto"
                android:inputType="textPersonName"
                android:paddingTop="30dp" />

            <EditText
                android:id="@+id/editFechaVencimiento"
                style="@style/vistaRegistro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/fecha_vencimiento"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTipoProducto"
                style="@style/vistaRegistro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/tipo_producto"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDescripcionProducto"
                style="@style/vistaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/descripcion_producto"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarProducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF9800"
            android:text="@string/guardar_producto"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>