<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvitarAmigos">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="406dp"
        android:layout_height="725dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUsuarioInvita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/mate_sc"
                android:gravity="center"
                android:hint="@string/usuario"
                android:textColor="#FFC107"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mate_sc"
                android:gravity="center"
                android:text="@string/usuario_invita"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idnombreProdinvitacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mate_sc"
                android:gravity="center"
                android:hint="@string/nombre_producto"
                android:textColor="#FF5722"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageProducto"
                style="@style/CardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/logo_alimento" />

            <TextView
                android:id="@+id/textViewExito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/mate_sc"
                android:gravity="center"
                android:text="@string/exito"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInvitar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/mate_sc"
                android:gravity="center"
                android:text="@string/invitacion"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/flecha" />

            <Button
                android:id="@+id/btnInvitarAmigos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:background="#B3BB21"
                android:text="@string/invitar_amigos"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>