<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="413dp"
        android:layout_height="198dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/editFotoAlimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/registro_img"
                app:srcCompat="@drawable/avatar_alimento" />
        </LinearLayout>

        <TextView
            android:id="@+id/editNombreAlimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ColorX"
            android:fontFamily="@font/mate_sc"
            android:text="@string/nombre_producto"
            android:textColor="#FFFFFF"
            android:translationY="30dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="417dp"
        android:layout_height="145dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/footer_img"
        android:gravity="top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <Button
            android:id="@+id/btnLoQuiero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/mate_sc"
            android:foregroundGravity="center_vertical"
            android:text="@string/lo_quiero"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@android:color/holo_red_light"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="410dp"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/editTextTipoProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo_producto"
            android:textColor="#8BC34A" />

        <TextView
            android:id="@+id/ecitTextFechaVencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fecha_vencimiento"
            android:textColor="#8BC34A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="409dp"
        android:layout_height="320dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descripcion_producto"
            android:textColor="#8BC34A" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>